// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`instance authorization rules 1`] = `
"{
  "upstreamDBConnStr": "",
  "cvrDBConnStr": "",
  "changeDBConnStr": "",
  "replicaDBFile": "",
  "replicaID": "",
  "log": {
    "level": "info"
  },
  "authorization": {
    "issue": {
      "row": {
        "update": [
          [
            "allow",
            {
              "table": "issue",
              "where": [
                {
                  "type": "simple",
                  "op": "=",
                  "field": "id",
                  "value": {
                    "type": "static",
                    "anchor": "preMutationRow",
                    "field": "id"
                  }
                },
                {
                  "type": "simple",
                  "op": "=",
                  "field": "creatorID",
                  "value": {
                    "type": "static",
                    "anchor": "authData",
                    "field": "sub"
                  }
                }
              ],
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ],
          [
            "allow",
            {
              "table": "user",
              "where": [
                {
                  "type": "simple",
                  "op": "=",
                  "field": "id",
                  "value": {
                    "type": "static",
                    "anchor": "authData",
                    "field": "sub"
                  }
                },
                {
                  "type": "simple",
                  "op": "=",
                  "field": "role",
                  "value": "crew"
                }
              ],
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ]
      }
    },
    "comment": {
      "row": {
        "update": [
          [
            "allow",
            {
              "table": "comment",
              "where": [
                {
                  "type": "simple",
                  "op": "=",
                  "field": "id",
                  "value": {
                    "type": "static",
                    "anchor": "preMutationRow",
                    "field": "id"
                  }
                },
                {
                  "type": "simple",
                  "op": "=",
                  "field": "creatorID",
                  "value": {
                    "type": "static",
                    "anchor": "authData",
                    "field": "sub"
                  }
                }
              ],
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ]
      },
      "cell": {
        "creatorID": {
          "update": [
            [
              "allow",
              {
                "table": "user",
                "where": [
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "id",
                    "value": {
                      "type": "static",
                      "anchor": "authData",
                      "field": "sub"
                    }
                  },
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "role",
                    "value": "crew"
                  }
                ],
                "orderBy": [
                  [
                    "id",
                    "asc"
                  ]
                ]
              }
            ]
          ]
        }
      }
    }
  }
}"
`;

exports[`static authorization rules 1`] = `
"{
  "upstreamDBConnStr": "",
  "cvrDBConnStr": "",
  "changeDBConnStr": "",
  "replicaDBFile": "",
  "replicaID": "",
  "log": {
    "level": "info"
  },
  "authorization": {
    "user": {
      "table": {
        "select": [
          [
            "allow",
            {
              "table": "user",
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ],
        "insert": [
          [
            "allow",
            {
              "table": "user",
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ],
        "update": [
          [
            "allow",
            {
              "table": "user",
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ],
        "delete": [
          [
            "allow",
            {
              "table": "user",
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ]
      },
      "column": {
        "id": {
          "select": [
            [
              "allow",
              {
                "table": "user",
                "orderBy": [
                  [
                    "id",
                    "asc"
                  ]
                ]
              }
            ]
          ],
          "insert": [
            [
              "allow",
              {
                "table": "user",
                "orderBy": [
                  [
                    "id",
                    "asc"
                  ]
                ]
              }
            ]
          ],
          "update": [
            [
              "allow",
              {
                "table": "user",
                "orderBy": [
                  [
                    "id",
                    "asc"
                  ]
                ]
              }
            ]
          ],
          "delete": [
            [
              "allow",
              {
                "table": "user",
                "orderBy": [
                  [
                    "id",
                    "asc"
                  ]
                ]
              }
            ]
          ]
        }
      }
    }
  }
}"
`;

exports[`static authorization rules 2`] = `
"{
  "upstreamDBConnStr": "",
  "cvrDBConnStr": "",
  "changeDBConnStr": "",
  "replicaDBFile": "",
  "replicaID": "",
  "log": {
    "level": "info"
  },
  "authorization": {
    "user": {
      "table": {
        "select": [
          [
            "allow",
            {
              "table": "user",
              "where": [
                {
                  "type": "simple",
                  "op": "=",
                  "field": "id",
                  "value": {
                    "type": "static",
                    "anchor": "authData",
                    "field": "sub"
                  }
                },
                {
                  "type": "simple",
                  "op": "=",
                  "field": "role",
                  "value": "crew"
                }
              ],
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ],
        "insert": [
          [
            "allow",
            {
              "table": "user",
              "where": [
                {
                  "type": "simple",
                  "op": "=",
                  "field": "id",
                  "value": {
                    "type": "static",
                    "anchor": "authData",
                    "field": "sub"
                  }
                },
                {
                  "type": "simple",
                  "op": "=",
                  "field": "role",
                  "value": "crew"
                }
              ],
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ],
        "update": [
          [
            "allow",
            {
              "table": "user",
              "where": [
                {
                  "type": "simple",
                  "op": "=",
                  "field": "id",
                  "value": {
                    "type": "static",
                    "anchor": "authData",
                    "field": "sub"
                  }
                },
                {
                  "type": "simple",
                  "op": "=",
                  "field": "role",
                  "value": "crew"
                }
              ],
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ],
        "delete": [
          [
            "allow",
            {
              "table": "user",
              "where": [
                {
                  "type": "simple",
                  "op": "=",
                  "field": "id",
                  "value": {
                    "type": "static",
                    "anchor": "authData",
                    "field": "sub"
                  }
                },
                {
                  "type": "simple",
                  "op": "=",
                  "field": "role",
                  "value": "crew"
                }
              ],
              "orderBy": [
                [
                  "id",
                  "asc"
                ]
              ]
            }
          ]
        ]
      },
      "column": {
        "login": {
          "select": [
            [
              "allow",
              {
                "table": "user",
                "where": [
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "id",
                    "value": {
                      "type": "static",
                      "anchor": "authData",
                      "field": "sub"
                    }
                  },
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "role",
                    "value": "crew"
                  }
                ],
                "orderBy": [
                  [
                    "id",
                    "asc"
                  ]
                ]
              }
            ]
          ],
          "insert": [
            [
              "allow",
              {
                "table": "user",
                "where": [
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "id",
                    "value": {
                      "type": "static",
                      "anchor": "authData",
                      "field": "sub"
                    }
                  },
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "role",
                    "value": "crew"
                  }
                ],
                "orderBy": [
                  [
                    "id",
                    "asc"
                  ]
                ]
              }
            ]
          ],
          "update": [
            [
              "allow",
              {
                "table": "user",
                "where": [
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "id",
                    "value": {
                      "type": "static",
                      "anchor": "authData",
                      "field": "sub"
                    }
                  },
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "role",
                    "value": "crew"
                  }
                ],
                "orderBy": [
                  [
                    "id",
                    "asc"
                  ]
                ]
              }
            ]
          ],
          "delete": [
            [
              "allow",
              {
                "table": "user",
                "where": [
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "id",
                    "value": {
                      "type": "static",
                      "anchor": "authData",
                      "field": "sub"
                    }
                  },
                  {
                    "type": "simple",
                    "op": "=",
                    "field": "role",
                    "value": "crew"
                  }
                ],
                "orderBy": [
                  [
                    "id",
                    "asc"
                  ]
                ]
              }
            ]
          ]
        }
      }
    }
  }
}"
`;
